--- a/tags.html
+++ b/tags.html
@@ -1,16 +1,17 @@
 ---
 layout: page
-title: 
-header: 根据快速导航到相应的文章
+title: 标签
+header: 根据标签快速导航到相应的文章
 group: navigation
 ---
 {% include JB/setup %}
 
+<!--
 <ul class="tag_box inline">
   {% assign tags_list = site.tags %}  
   {% include JB/tags_list %}
 </ul>
-
+-->
 <div class = "card">
 {% for tag in site.tags %} 
 
