--- a/category.html
+++ b/category.html
@@ -11,7 +11,7 @@ group: navigation
 <h3>{{ category | first }}</h3>
 <ul class="arc-list">
     {% for post in category.last %}
-        <li>{{ post.date | date:"%d/%m/%Y"}}<a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li>{{ post.date | date:"%Y-%m-%d"}} &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
 {% endfor %}
